public static class TagManager
{
    public static string PLAYER_TAG = "Player";
    public static string GROUND_TAG = "Ground";
    public static string TREE1_TAG = "Tree1";
    public static string TREE2_TAG = "Tree2";
    public static string ENEMY_TAG = "Enemy";
    public static string OBSTACLE_TAG = "Obstacle";
    public static string HEALTH_TAG = "Health";
    public static string GAMEPLAY_CONTROLLER_TAG = "GameplayController";

    public static string JUMP_BUTTON = "Jump";

    public static string JUMP_ANIMATION_PARAM = "Jump";
    public static string ATTACK_ANIMATION_PARAM = "Attack";
    public static string RUNNING_ANIMATION_PARAM = "Running";
    public static string DOUBLE_JUMP_ANIMATION_PARAM = "DoubleJump";
    public static string JUMP_ATTACK_ANIMATION_PARAM = "JumpAttack";
    public static string DEATH_ANIMATION_PARAM = "Death";
    public static string ATTACK_TRIGGER_PARAM = "Attack Trigger";

    //Animation Names

    public static string RUNNING_ANIMATION_NAME = "Running"; 
    public static string RUNNING_ATTACK_ANIMATION_NAME = "RunningAttack"; 
    public static string JUMP_ANIMATION_NAME = "Jump"; 
    public static string JUMP_ATTACK_ANIMATION_NAME = "JumpAttack"; 
    public static string FALL_ANIMATION_NAME = "Fall"; 
    public static string DOUBLE_JUMP_ANIMATION_NAME = "DoubleJump"; 
    public static string DEATH_ANIMATION_NAME = "Death";

    //Scene Names

    public static string GAMEPLAY_SCENE_NAME = "GamePlay";
    public static string MAIN_MENU_SCENE_NAME = "MainMenu";

    //Character Names

    public static string PANDA_NORMAL_NAME = "PandaNormal";
    public static string PANDA_RED_NAME = "PandaRed";
    public static string PANDA_BLUE_NAME = "PandaBlue";

    //Game Data

    public static string CHARACTER_DATA = "Character";
    public static string SELECTED_CHARACTER_DATA = "Selected Character";
    public static string HIGHSCORE_DATA = "HighScore";

    public static string DATA_INITIALIZED = "Data Initialized";

}
